--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@pkmn/dex": "^0.3.16",
     "@pkmn/sets": "^1.0.1",
     "@smogon/calc": "^0.6.0",
+    "@types/express": "^4.17.11",
     "@types/node": "^14.14.30",
     "@types/node-fetch": "^2.5.8",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "koffing": "^0.4.0",
     "node-fetch": "^2.6.1",
     "ts-node": "^9.1.1",
