--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "koffing": "^0.4.0",
+    "node": "^12.20.1",
     "node-fetch": "^2.6.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
