--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@pkmn/sets": "^1.0.1",
     "@smogon/calc": "^0.6.0",
     "@types/express": "^4.17.11",
+    "@types/moment": "^2.13.0",
+    "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.30",
     "@types/node-fetch": "^2.5.8",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "koffing": "^0.4.0",
+    "moment": "^2.29.1",
+    "mongoose": "^5.11.17",
     "node": "^12.20.1",
     "node-fetch": "^2.6.1",
     "ts-node": "^9.1.1",
