--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@pkmn/sets": "^1.0.1",
     "@smogon/calc": "^0.6.0",
     "@types/express": "^4.17.11",
+    "@types/google-spreadsheet": "^3.0.2",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.30",
@@ -25,6 +26,8 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-spreadsheet": "^3.1.15",
+    "googleapis": "^67.1.0",
     "koffing": "^0.4.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.17",
