--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "start": "node --max_old_size=2560 .",
+    "start": "node --max_old_space_size=2560 .",
     "build": "tsc",
     "test": "ts-node ./src/index.ts"
   },
